--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ nav ul li{
 
 .bottom{
 	position: sticky;
-	background-color: rgb(82, 56, 56);
+	background-color: rgb(2, 2, 2);
 	height: 130px;
 	display: flex;
 	justify-content:center;
@@ -64,8 +64,11 @@ nav ul li{
 	width: 80vw;
 	cursor: pointer;
 }
-.icons {
+.icons img{
 	cursor: pointer;
+	width: 35px;
+	height: 35px;
+	padding: 8px;
 	
 
 }
@@ -104,9 +107,10 @@ nav ul li{
     position: absolute;
     left: 10vw;
     font-family: 'Varela Round', sans-serif;
+    color: white;
 }
 
-.songInfo img{
+#gif{
     opacity: 0;
     transition: opacity 0.4s ease-in;
 }
